--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -35,19 +35,19 @@
         <tbody>
           <tr>
             <td id = 'name1'>-</td>
-            <td id = 'subject1'>과탐</td>
+            <td id = 'subject1'>-</td>
             <td id = 'time1'>-</td>
             <td id = 'memo1'>-</td>
           </tr>
           <tr>
             <td id = 'name2'>-</td>
-            <td id = 'subject2'>수학</td>
+            <td id = 'subject2'>-</td>
             <td id = 'time2'>-</td>
             <td id = 'memo2'>-</td>
           </tr>
           <tr>
             <td id = 'name3'>-</td>
-            <td id = 'subject3'>수학</td>
+            <td id = 'subject3'>-</td>
             <td id = 'time3'>-</td>
             <td id = 'memo3'>-</td>
           </tr>
